# real_interview

./: .env_copy  .gitignore  Dockerfile  Procfile  README.md  gunicorn.conf.py  main.py  params.yaml  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py
app/real_interview/: __init__.py
app/real_interview/backend/: app_factory.py  server.py  wsgi.py
app/real_interview/backend/agents/: __init__.py  candidate_avatar_agent.py  feedback_agent.py  hr_recruiter_agent.py  interview_context.py  interviewer_agent.py  job_application_agent.py  panel_coordinator_agent.py  resume_parse_agent.py  router_agent.py  summarizer_agent.py
app/real_interview/backend/auth/: __init__.py  admin_auth.py  cookies.py  email_utils.py  jwt_auth.py  rate_limit.py  token_store.py
app/real_interview/backend/config/: configuration.py
app/real_interview/backend/graphs/: __init__.py  checkpointer.py  interview_graph.py
app/real_interview/backend/llm/: openaillm.py
app/real_interview/backend/nodes/: __init__.py  interview_nodes.py
app/real_interview/backend/routes/: __init__.py  admin_routes.py  avatar_routes.py  feedback_routes.py  interview_routes.py  job_application_routes.py  resume_routes.py  user_maintenance_routes.py
app/real_interview/backend/services/: __init__.py  admin_service.py  avatar_discuss_service.py  email_service.py  ideal_answer_report_service.py  interview_closing.py  interview_context_loader.py  interview_qa_extract.py  interview_record.py  (+9 more)
app/real_interview/frontend/: admin.html  admin.js  app.js  feedback.html  feedback.js  index.html  styles.css
(+8 files in other folders)
