[project]
name = "real-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.0.0",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "bcrypt",
    "flask",
    "langchain-openai>=1.2.1",
    "pypdf>=6.11.0",
]
