[project]
name = "real-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.0.0",
    "pymongo>=4.12,<4.17",
    "python-dotenv>=1.0.0",
    "bcrypt",
    "flask",
    "langchain-openai>=1.2.1",
    "pypdf>=6.11.0",
    "python-docx>=1.1.0",
    "legacy-doc>=0.2.1",
    "pyyaml>=6.0.0",
    "langgraph>=1.2.0",
    "langchain-core>=0.3.0",
    "tavily-python>=0.5.0",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "pyjwt>=2.8.0",
    "gunicorn>=22.0.0",
    "fpdf2>=2.8.0",
]
